--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: chris.heald.me
-description: "Personal blog of Chris Heald. Topics include web development, performance, and security."
+description: "My personal blog. Topics include software, devops, security, and general nerditry."
 url: https://chris.heald.me
 google_analytics: 'UA-5738363-1'
 disqus_shortname: coffeepowered
